# Federated-Learning-XGboost-Project

./: README.md
federated-learning-xgboost/client/: preprocessing.py  pyproject.toml  run_supernodes.sh
federated-learning-xgboost/client/my-app-xgboost/: __init__.py
federated-learning-xgboost/client/my-app-xgboost/datasets/: client0_20.csv  client1_10.csv
federated-learning-xgboost/server/: approve_supernodes.ps1  certificate.conf  generate_auth_keys.sh  generate_server_cert.ps1  pyproject.toml  start_superlink.ps1
federated-learning-xgboost/server/my-app-xgboost/: client_app.py  server_app.py  task.py
